# libHOBDCalc

./: README.rst  index.html  params.json
liHOBDCalc-1.0.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
liHOBDCalc-1.0.0/Data/: Makefile  Makefile.am  Makefile.in  README.html  hobdcalc_assertions.c
liHOBDCalc-1.0.0/Sources/: Hobdcalc.c  Makefile  Makefile.am  Makefile.in  hobdcalc.h
liHOBDCalc-1.0.0/Sources/.deps/: Hobdcalc.Plo
liHOBDCalc-1.0.0/Sources/conversion/float_to_bin/: float_bin.c
liHOBDCalc-1.0.0/Sources/conversion/float_to_hex/: float_hex.c
liHOBDCalc-1.0.0/Sources/conversion/float_to_oct/: float_oct.c
liHOBDCalc-1.0.0/Sources/conversion/int_bin/: calc_int_bin.c
liHOBDCalc-1.0.0/Sources/conversion/int_hex/: calc_int_hex.c
liHOBDCalc-1.0.0/Sources/conversion/int_oct/: calc_int_oct.c
liHOBDCalc-1.0.0/Sources/conversion/utils/: conversion_utils.c
liHOBDCalc-1.0.0/Sources/operations/float_result/: calc_bin_float_operations.c  calc_hex_float_operations.c  calc_oct_float_operations.c
liHOBDCalc-1.0.0/Sources/operations/int_result/: calc_bin_int_operations.c  calc_hex_int_operations.c  calc_oct_int_operations.c
liHOBDCalc-1.0.0/man/: Makefile  Makefile.am  Makefile.in
