SUBDIRS = ./Sources ./man ./Data .



ACLOCAL_AMFLAGS=-I m4 

prefix=/usr

EXTRA_DIST =    Sources                          \
		Sources/conversion                \
		Sources/conversion/float_to_bin   \
		Sources/conversion/float_to_hex   \
		Sources/conversion/float_to_oct   \
		Sources/conversion/int_bin        \
		Sources/conversion/int_hex        \
		Sources/conversion/int_oct        \
		Sources/conversion/utils          \
		Sources/operations                \
		Sources/operations/float_result   \
		Sources/operations/int_result     \
		man                               \
		Data








